[package]
name = "wisp-mux"
version = "6.0.0"
license = "MIT"
description = "A library for easily creating Wisp servers and clients."
homepage = "https://github.com/MercuryWorkshop/epoxy-tls/tree/multiplexed/wisp"
repository = "https://github.com/MercuryWorkshop/epoxy-tls/tree/multiplexed/wisp"
readme = "README.md"
edition = "2021"
keywords = ["websocket", "wisp", "multiplexor", "multiplexing", "stream"]
categories = ["network-programming", "asynchronous", "web-programming::websocket", "wasm"]

[dependencies]
async-trait = "0.1.85"
bitflags = { version = "2.6.0", optional = true }
bytes = "1.9.0"
ed25519 = { version = "2.2.3", optional = true, features = ["std", "alloc"] }
flume = "0.11.1"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
getrandom = { version = "0.2.15", optional = true }
num_enum = "0.7.3"
pin-project = "1.1.8"
rustc-hash = "2.1.0"
slab = "0.4.9"
thiserror = "2.0.9"
tokio = { version = "1.42.0", optional = true }
tokio-tungstenite = { version = "0.26.1", features = ["stream"], optional = true, default-features = false }
tokio-websockets = { version = "0.11.1", optional = true }

[features]
default = ["certificate"]
certificate = ["dep:getrandom", "dep:ed25519", "dep:bitflags"]
wasm = ["getrandom/js"]
tokio-websockets = ["dep:tokio-websockets", "dep:tokio"]
tokio-tungstenite = ["dep:tokio-tungstenite", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt", "time"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
